working homeassistant 0.86.4 packages

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
+*.spk
+unpackerd-spk
 distrib
-packages
-native/*/work*
-cross/*/work*
-kernel/*/work*
-spk/*/work*
-diyspk/*/work*
-toolchains/*/work*
-local.mk
-*.DS_Store
-*~
