--- a/spk/python3/src/requirements_0.84.6.txt
+++ b/spk/python3/src/requirements_0.84.6.txt
@@ -28,7 +28,7 @@ olefile==0.46
 
 
 ## It may happen you want to add a component to Home Assistant, but it fails to install a Python package.
-## In the logs you see a error "Unable to install package *Module_Name* if you install that
+## In the logs you see a error "Unable to install package *Module_Name*", if you install that
 # package with pip, some of its required packages fail with error "Failed building wheel for *Module_Name*"
 ## Add these Python modules/packages that fail with that "building wheel" error in to the list below.
 
@@ -74,27 +74,3 @@ voluptuous-serialize==2.0.0
 python-miio==0.4.4
 netifaces==0.10.9
 android-backup==0.2.0
-
-
-
-### LATEST
-aiohttp==3.6.1
-astral==1.10.1
-async_timeout==3.0.1
-attrs==19.3.0
-bcrypt==3.1.7
-certifi>=2019.9.11
-contextvars==2.4
-importlib-metadata==0.23
-jinja2>=2.10.3
-PyJWT==1.7.1
-# PyJWT has loose dependency. We want the latest one.
-cryptography==2.8
-pip>=8.0.3
-python-slugify==4.0.0
-pytz>=2019.03
-pyyaml==5.1.2
-requests==2.22.0
-ruamel.yaml==0.15.100
-voluptuous==0.11.7
-voluptuous-serialize==2.3.0
